Fixing overflow issue with word lists

--- a/src/inform_mapper/static/scss/_graph.scss
+++ b/src/inform_mapper/static/scss/_graph.scss
@@ -169,7 +169,7 @@ div.accordion-header {
 }
 
 .word-panel {
-    font-size: .9em;
+    font-size: .8em;
     height: 200px;
     overflow: scroll;
 }
